# actividad-sonarqube-test

./: CMakeLists.txt  README.md  main.cpp
include/: integradora.hpp
src/: integradora.cpp
test/: CMakeLists.txt  integradora_test.cpp
